--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -45,6 +45,7 @@
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
